[gd_scene load_steps=5 format=2]

[ext_resource path="res://Kenney/Singles/Diamond/diamond_01.png" type="Texture" id=1]
[ext_resource path="res://Entities/PowerupExtraJump/PowerupExtraJump.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[node name="PowerupExtraJump" type="Area2D"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
playing = true

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_PowerupExtraJump_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
